--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,7 +6,6 @@
     <title>{% block title %}Mon Application Symfony{% endblock %}</title>
 
     {# Import Tailwind CSS #}
-    <link rel="stylesheet" href="{{ asset('build/app.css') }}">
 </head>
 <body>
 <header>
@@ -14,7 +13,9 @@
 </header>
 
 <main class="container mx-auto p-4">
-    {% block body %}{% endblock %}
+    {% block body %}
+    {% include 'parts/topiccard.html.twig' %}
+    {% endblock %}
 </main>
 
 <footer class="text-center text-gray-500 p-4">
