--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Mon Application Symfony{% endblock %}</title>
+    <title>{% block title %}ForumInfinite{% endblock %}</title>
 
     {# Import Tailwind CSS #}
 </head>
@@ -19,7 +19,7 @@
 </main>
 
 <footer class="text-center text-gray-500 p-4">
-    &copy; {{ "now"|date("Y") }} Mon Application Symfony
+    &copy; {{ "now"|date("Y") }} ForumInfinite
 </footer>
 
 {# Import le JavaScript #}
