--- a/templates/topic/_delete_form.html.twig
+++ b/templates/topic/_delete_form.html.twig
@@ -1,4 +1,5 @@
-<form method="post" action="{{ path('app_topic_delete', {'id': topic.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('app_topic_delete', {'id': topic.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');" class="text-center">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ topic.id) }}">
-    <button class="btn">Delete</button>
+    <button type="submit" class="px-6 py-2 bg-red-600 text-white rounded-lg hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-red-500">
+        Delete</button>
 </form>
