--- a/templates/parts/topiccard.html.twig
+++ b/templates/parts/topiccard.html.twig
@@ -2,17 +2,16 @@
 <div class="max-w-sm mx-auto bg-white rounded-lg border border-gray-200 shadow-md hover:shadow-lg">
     <div class="p-4">
         <h2 class="text-lg font-bold text-gray-900 truncate">
-{#            {{ topic.title }}#}
+            {{ topic.title }}
         </h2>
         <p class="text-sm text-gray-500 mt-2 line-clamp-3">
-{#            {{ topic.description }}#}
+            {{ topic.description }}
         </p>
     </div>
     <div class="flex items-center justify-between p-4 border-t border-gray-200 bg-gray-50">
         <div class="flex items-center space-x-2">
-{#            <img src="{{ topic.author.avatarUrl }}" alt="Avatar de {{ topic.author.name }}" class="w-8 h-8 rounded-full">#}
             <div>
-                <p class="text-sm font-medium text-gray-700">test</p>
+                <p class="text-sm font-medium text-gray-700"></p>
                 <p class="text-xs text-gray-500">Posté le 2024/12/01</p>
             </div>
         </div>
