--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -48,6 +48,24 @@
                     <span class="font-medium">Gérer les langues</span>
                 </a>
             </div>
+
+            <div class="flex justify-center">
+                <a href="{{ path('app_reply_index') }}" class="w-full max-w-xs px-6 py-8 bg-red-600 text-white rounded-lg shadow-lg text-center hover:bg-red-700 transition duration-300">
+                    <svg class="h-12 w-12 mx-auto mb-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                        <path fill-rule="evenodd" d="M10 18a7 7 0 100-14 7 7 0 000 14zm0 2a9 9 0 110-18 9 9 0 010 18z" clip-rule="evenodd"/>
+                    </svg>
+                    <span class="font-medium">Gérer les réponses</span>
+                </a>
+            </div>
+
+            <div class="flex justify-center">
+                <a href="{{ path('app_category_index') }}" class="w-full max-w-xs px-6 py-8 bg-yellow-300 text-white rounded-lg shadow-lg text-center hover:bg-yellow-700 transition duration-300">
+                    <svg class="h-12 w-12 mx-auto mb-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                        <path fill-rule="evenodd" d="M10 18a7 7 0 100-14 7 7 0 000 14zm0 2a9 9 0 110-18 9 9 0 010 18z" clip-rule="evenodd"/>
+                    </svg>
+                    <span class="font-medium">Gérer les Catégories</span>
+                </a>
+            </div>
         </div>
     </div>
 {% endblock %}
