--- a/templates/topic/_form.html.twig
+++ b/templates/topic/_form.html.twig
@@ -16,7 +16,7 @@
 
 {% block body %}
     <div class="container mx-auto p-6">
-        <h1 class="text-3xl font-semibold mb-6">{{ button_label|default('Create Language') }}</h1>
+        <h1 class="text-3xl font-semibold mb-6">{{ button_label|default('Create Topic') }}</h1>
 
         <div class="bg-white p-6 rounded-lg shadow-lg">
             {{ form_start(form, { 'attr': { 'class': 'space-y-4' } }) }}
